crates/swc_css_parser/tests/errors/rome/invalid/selector7/output.stderr
error: Invalid selector
 --> $DIR/tests/errors/rome/invalid/selector7/input.css:1:4
  |
1 | a::1 {
  |    ^

